# streamlit_uv_project

./: README.md  pyproject.toml  requirements.txt  vercel.json
src/streamlit_project_uv/: __init__.py  app.py
