[project]
name = "streamlit-project-uv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Hira Khalid", email = "hiratech88@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2.3",
    "streamlit>=1.42.1",
]

[project.scripts]
streamlit-project-uv = "streamlit_project_uv:main"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
